# coelacanth

./: .gitignore  CMakeLists.txt  README.md  clang-format.cmake  coelacanth.cc  dbgstream.h  makefile  tasksystem.h  version.h.in
.github/workflows/: workflow.yml
cmake/: build-flags.cmake  clang-format.cmake  find-boost.cmake  git-hash.cmake  time-stamp.cmake
include/callgraph/: callgraph.h  calliters.h  calltypes.h  funcmeta.h
include/coelacanth/: coelacanth.h  dbgstream.h  fireonce.h  tasksystem.h
include/config/: configs.h  options.h
include/controlgraph/: controlgraph.h  controltypes.h  splittree.h
include/typegraph/: typean.h  typecats.h  typegraph.h  typeiters.h
include/utils/: indent_ostream.h  semitree.h  semitree_iterator.h  semitree_nodes.h
include/varassign/: varassign.h  variable.h
lib/: CMakeLists.txt
lib/callgraph/: CMakeLists.txt  callgraph.cc
lib/config/: CMakeLists.txt  configs.cc
lib/controlgraph/: CMakeLists.txt  controlgraph.cc  splittree.cc
lib/typegraph/: CMakeLists.txt  typegraph.cc
lib/utils/: CMakeLists.txt  indent_ostream.cc
lib/varassign/: CMakeLists.txt  varassign.cc
scripts/: conanfile.py  makefile_linux  makefile_windows
test/unit/: CMakeLists.txt  runner.cc
test/unit/semitree/: CMakeLists.txt  tree.h  tree_basic.cc  tree_iteration.cc  tree_type_traits.cc
test/unit/utils/: CMakeLists.txt  indent_ostream.cc
tools/: CMakeLists.txt
tools/coelacanth/: CMakeLists.txt  coelacanth.cc  dbgstream.cc  tasksystem.cc
